--- a/src/app.json
+++ b/src/app.json
@@ -19,7 +19,7 @@
   "usingComponents": {},
   "window": {
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#EC2C17",
+    "navigationBarBackgroundColor": "#276EF2",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "white",
     "backgroundColor": "#f5f5f5"
@@ -27,7 +27,7 @@
   "tabBar": {
     "borderStyle": "white",
     "color": "#909090",
-    "selectedColor": "#EC2C17",
+    "selectedColor": "#276EF2",
     "list": [
       {
         "text": "首页",
@@ -38,20 +38,20 @@
       {
         "text": "动态",
         "pagePath": "pages/dynamic/index/main",
-        "iconPath": "/static/images/mine-unselected.png",
-        "selectedIconPath": "/static/images/mine-selected.png"
+        "iconPath": "/static/images/dynamic-unselected.png",
+        "selectedIconPath": "/static/images/dynamic-selected.png"
       },
       {
         "text": "工作台",
         "pagePath": "pages/workBench/index/main",
-        "iconPath": "/static/images/mine-unselected.png",
-        "selectedIconPath": "/static/images/mine-selected.png"
+        "iconPath": "/static/images/workBench-unselected.png",
+        "selectedIconPath": "/static/images/workBench-selected.png"
       },
       {
         "text": "消息",
         "pagePath": "pages/message/index/main",
-        "iconPath": "/static/images/mine-unselected.png",
-        "selectedIconPath": "/static/images/mine-selected.png"
+        "iconPath": "/static/images/message-unselected.png",
+        "selectedIconPath": "/static/images/message-selected.png"
       },
       {
         "text": "我的",
