--- a/src/app.json
+++ b/src/app.json
@@ -9,6 +9,7 @@
     "pages/register/login/main",
     "pages/dynamic/index/main",
     "pages/workBench/index/main",
+     "pages/workBench/service/main",
     "pages/message/index/main"
   ],
   "permission": {
